update all files

--- a/index.html
+++ b/index.html
@@ -1052,7 +1052,7 @@
                   <div class="author-info">
                     <img src="assets/img/person/person-m-14.webp" alt="Author" class="author-avatar">
                     <div class="author-details">
-                      <h4>Michael Anderson</h4>
+                      <h4>Ahmed Hamdy</h4>
                       <span class="role">Project Manager</span>
                       <span class="company">InnovateTech Ltd</span>
                     </div>
@@ -1135,7 +1135,7 @@
                 </div>
                 <div class="detail-content">
                   <span class="detail-label">Email us</span>
-                  <span class="detail-value">ahmedhamdyy787@gmail.com</span>
+                  <span class="detail-value">erfgouegotytgorfuegrtgueg</span>
                 </div>
               </div>
 
@@ -1145,7 +1145,7 @@
                 </div>
                 <div class="detail-content">
                   <span class="detail-label">Call us</span>
-                  <span class="detail-value">+20 106 3597 918</span>
+                  <span class="detail-value">347yr38ty3y358t</span>
                 </div>
               </div>
 
